# RAGformation

./: .gitignore  Azure OpenAI Integration in Workflow Automation (1).ipynb  README.md  api-wrapper.py  concierge_flows.html  prompts.py  pyproject.toml  requirements.txt  version2textToImage.py  workflows.py
docs/: concierge_flows.html
src/: agent_scripts.py  config.py  events.py  main.py  pricingAgent.py  prompts.py  ragEndpoint.py  testw.py  two_agents.py  version2textToImage.py  w2.py  workflows.py
src/agents/: concierge_agent.py
src/events/: event_emitters.py  event_types.py
src/experiments/: agent_scripts.py  api-wrapper.py  events.py  importall.py  prompts.py  toolhouse_code_executor.py  tryagents.py  two_agents.py  version2textToImage.py  w2.py  workflows.py
src/raw_tool_fuctions/: README.md  diagram_tools.py  price_tools.py  rag_tools.py
src/scrapers/: README.md  blog.py
src/tools/: README.md  diagram_tools.py  rag_tools.py
src/utils/: llm_initializer.py  logging.py
src/workflows/: concierge_workflow.py
tests/: anthropictest.py
