[project]
name = "ragformation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-embeddings-azure-openai>=0.2.5",
    "llama-index-llms-anthropic>=0.3.6",
    "llama-index-llms-azure-openai>=0.2.2",
    "llama-index-llms-ollama>=0.3.4",
    "llama-index>=0.11.17",
    "together>=1.3.1",
]
